add 3d models feature

--- a/www/ar.html
+++ b/www/ar.html
@@ -101,7 +101,7 @@
           <a class="mdl-navigation__link" href="index.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Inicio</a>
           <a class="mdl-navigation__link" href="qrcode.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">featured_video</i>Código QR</a>
           <a class="mdl-navigation__link" href="ar.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">mobile_screen_share</i>Realidad aumentada</a>
-          
+          <a class="mdl-navigation__link" href="3dmodels.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">touch_app</i>Dinosaurios</a>
           <div class="mdl-layout-spacer"></div>
           <a class="mdl-navigation__link" href="ayuda.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i>Ayuda<span class="visuallyhidden">Help</span></a>
         </nav>
